fix jumping background

--- a/src/app/[lang]/layout.module.scss
+++ b/src/app/[lang]/layout.module.scss
@@ -117,11 +117,8 @@
 
 .bodyBackground {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  max-height: 100vh;
+  width: 100%;
+  height: 100vh;
   opacity: 0.3;
   z-index: -1;
   background-image: url("./_assets/tree.png");
